hphp/test/slow/reflection/ReflectionFile_null_file.php.expectf

Catchable fatal error: Argument 1 passed to ReflectionFile::__construct() must be an instance of string, null given in %s/ReflectionFile_null_file.php on line 4
